...
            if (favoriteSelectionTarget == null) {
                DrawerOrdinaryMessage(
                    modifier = modifier,
                    message = stringResource(R.string.drawer_loading_applications),
                    showProgress = true,
                    action = null,
                    testTag = "drawer_loading",
                    onNavigateBack = onNavigateBack,
                )
            } else {
                DrawerSelectionMessage(
                    modifier = modifier,
                    target = favoriteSelectionTarget,
...
